Fix spacing between products list rows

--- a/less/plugins/ecommerce/products-listing.less
+++ b/less/plugins/ecommerce/products-listing.less
@@ -357,7 +357,7 @@
             margin-right: 0;
         }
         .product-item-article {
-            margin-bottom: 3%;
+            margin-bottom: 9%;
         }
     }
 }
@@ -376,7 +376,7 @@
             margin-right: 0;
         }
         .product-item-article {
-            margin-bottom: 4%;
+            margin-bottom: 9%;
         }
     }
 }
